# MCHF

./: .CMakeLists.txt.swp  .gitignore  .main.cpp.swp  CMakeLists.txt  MO  main.cpp  main.cpp.old  plots.py  test
BoysGenerator/: BoysPlot.py  main.cpp
InputFiles/: B.in  C.in  H.in  H2+Input.in  H2.in  H2O.in  H3++.in  HInput.in  He.in  He2.in  HeH.in  HeH2+.in
OrbitalData/: 3-21G  6-31++1  6-31++2  STO2  STO3  STO3Test  STO6  STO6H  STO6He  STO6test
OrbitalData/6311GSS/: .P1.swp  S1
OrbitalData/6311GSS/2/: P1
OrbitalData/6311GSS/6/: P1  S1  S2  S3  S4  S5
OrbitalData/6311GSSH/: P1  S2  S3  S4
OrbitalData/6311GSSHe/: S1  S2  S3
OrbitalData/6ZaPaNR/1/: D1  D2  D3  D4  D5  P1  P2  P3  P4  P5  P6  S1  S2  S3  S4  S5  S6  S7  S8
OrbitalData/STO3/1/: S1
OrbitalData/STO3/4/: P1  S1  S2
OrbitalData/STO3/8/: P2  S1  S2
OrbitalData/STO6/10/: S1
OrbitalData/STO6/2/: S1
OrbitalData/STO6/4/: S1
OrbitalData/STO6/6/: S1
PythonPlots/: plotEnergy.py
PythonScripts/: .plotEnergy.py.swp  MultiCentreAbsorbtion.py  plotEnergy.py  plots.py
include/: Array3D.hh  BoysFunction.hh  Constants.hh  FockSolver.hh  Functions.hh  GaussianOrbital.hh  HydrogenicOrbital.hh  LinearAlgebra.hh  Matrix.hh  Molecule.hh  Numerics.hh  ObSaScheme.hh  Orbital.hh  STO6GOrbit.hh  STOnGOrbit.hh  Vector.hh
src/: BoysFunction.cpp  FockSolver.cpp  Functions.cpp  GaussianOrbital.cpp  HydrogenicOrbital.cpp  LinearAlgebra.cpp  Molecule.cpp  Numerics.cpp  Orbital.cpp  STO6GOrbit.cpp  STOnGOrbit.cpp
